fixed nav overlap on homepage, fixed most color issues in nav

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,31 +6,44 @@
   position: fixed;
   left: 0px;
   bottom: 0px;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(255, 255, 255, 0.90);
+  color: #180a01;
   font-family: 'Encode Sans Condensed', sans-serif;
   font-weight: 600;  
   border-top: 1px solid #3D3736;
+  
+  
  
   button {
     border: none;
+    background-color: rgba(255, 255, 255, 0.5);;
+  }
+
+  .navlink:visited {
+    color: #395336;
   }
 
   @media (max-width: 800px) {
     font-size: 2.2rem;
     .navlink {
       padding: 5px;
+      color: #180a01;
     }
   }
 
-  @media (min-width: 801px) {
+  @media (min-width: 800.1px) {
     font-size: 3rem;
-    .navlink:hover {
-      border-radius: 5px;
-      background-color: yellow;
-    }
     .navlink {
       padding: 8px;
       margin: 4px;
+      color: #180a01;
     }
+    .navlink:hover {
+      border-radius: 5px;
+      background-color: yellow;
+      text-decoration: none;
+    }
+
+
   }
 }
