--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -13,9 +13,9 @@ h1 {
 
   a {
       display: block;
-      background: rgba(255, 255, 255, .5);
+      background: rgba(255, 255, 255, .75);
       width: 90%;
-      padding: 25px;
+      padding: 20px;
       border-radius: 4px;
       margin: 1vh auto;
       text-decoration: none;
@@ -25,12 +25,15 @@ h1 {
       font-weight: 400;
       box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
       transition: all ease-in .3s;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
 
       &:hover {
           background-color: #fff;
           text-decoration: none;
       }
+  }
+  a:last-child {
+      margin-bottom: 2.8em;
   }
 
   span {
@@ -48,7 +51,11 @@ h1 {
 }
 
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {}
+@media (min-width: 576px) {
+    body {
+     
+    }
+}
 
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
 @media (min-width: 768px) {
