--- a/src/components/trip/TruckCheckoutForm.css
+++ b/src/components/trip/TruckCheckoutForm.css
@@ -120,9 +120,6 @@
       resize: vertical;
   }
 
-
-
-
   textarea:focus,
   input:focus,
   input[type]:focus,
@@ -151,7 +148,7 @@
       width: 100%;
       border-radius: 3px;
       border: none;
-      margin-bottom: 10px;
+      margin-bottom: 2.5em;
       color: white;
       transition: all ease-in .3s;
 
